include/lpb.h


struct lpb_control_type {
    bool f_indexing;
    int error;
    int out;
    int print_level;
    int start_print;
    int stop_print;
    int maxit;
    int infeas_max;
    int muzero_fixed;
    int restore_problem;
    int indicator_type;
    int arc;
    int series_order;
    int sif_file_device;
    int qplib_file_device;
    real_wp_ infinity;
    real_wp_ stop_abs_p;
    real_wp_ stop_rel_p;
    real_wp_ stop_abs_d;
    real_wp_ stop_rel_d;
    real_wp_ stop_abs_c;
    real_wp_ stop_rel_c;
    real_wp_ prfeas;
    real_wp_ dufeas;
    real_wp_ muzero;
    real_wp_ tau;
    real_wp_ gamma_c;
    real_wp_ gamma_f;
    real_wp_ reduce_infeas;
    real_wp_ obj_unbounded;
    real_wp_ potential_unbounded;
    real_wp_ identical_bounds_tol;
    real_wp_ mu_lunge;
    real_wp_ indicator_tol_p;
    real_wp_ indicator_tol_pd;
    real_wp_ indicator_tol_tapia;
    real_wp_ cpu_time_limit;
    real_wp_ clock_time_limit;
    bool remove_dependencies;
    bool treat_zero_bounds_as_general;
    bool just_feasible;
    bool getdua;
    bool puiseux;
    bool every_order;
    bool feasol;
    bool balance_initial_complentarity;
    bool crossover;
    bool space_critical;
    bool deallocate_error_fatal;
    bool generate_sif_file;
    bool generate_qplib_file;
    char sif_file_name[31];
    char qplib_file_name[31];
    char prefix[31];
    struct fdc_control_type fdc_control;
    struct sbls_control_type sbls_control;
    struct fit_control_type fit_control;
    struct roots_control_type roots_control;
    struct cro_control_type cro_control;
};
struct lpb_time_type {
    real_wp_ total;
    real_wp_ preprocess;
    real_wp_ find_dependent;
    real_wp_ analyse;
    real_wp_ factorize;
    real_wp_ solve;
    real_wp_ clock_total;
    real_wp_ clock_preprocess;
    real_wp_ clock_find_dependent;
    real_wp_ clock_analyse;
    real_wp_ clock_factorize;
    real_wp_ clock_solve;
};
struct lpb_inform_type {
    int status;
    int alloc_status;
    char bad_alloc[81];
    int iter;
    int factorization_status;
    int factorization_integer;
    int factorization_real;
    int nfacts;
    int nbacts;
    int threads;
    real_wp_ obj;
    real_wp_ primal_infeasibility;
    real_wp_ dual_infeasibility;
    real_wp_ complementary_slackness;
    real_wp_ init_primal_infeasibility;
    real_wp_ init_dual_infeasibility;
    real_wp_ init_complementary_slackness;
    real_wp_ potential;
    real_wp_ non_negligible_pivot;
    bool feasible;
    int checkpointsIter[16];
    real_wp_ checkpointsTime[16];
    struct lpb_time_type time;
    struct fdc_inform_type fdc_inform;
    struct sbls_inform_type sbls_inform;
    struct fit_inform_type fit_inform;
    struct roots_inform_type roots_inform;
    struct cro_inform_type cro_inform;
    struct rpd_inform_type rpd_inform;
};
void lpb_initialize( void **data, 
                     struct lpb_control_type *control,
                     int *status );
void lpb_read_specfile( struct lpb_control_type *control, 
                        const char specfile[] );
void lpb_import( struct lpb_control_type *control,
                 void **data,
                 int *status,
                 int n,
                 int m,
                 const char A_type[], 
                 int A_ne, 
                 const int A_row[],
                 const int A_col[], 
                 const int A_ptr[] );
void lpb_reset_control( struct lpb_control_type *control,
                        void **data,
                        int *status );
void lpb_solve_lp( void **data,
                   int *status,
                   int n, 
                   int m, 
                   const real_wp_ g[], 
                   const real_wp_ f, 
                   int a_ne,
                   const real_wp_ A_val[], 
                   const real_wp_ c_l[], 
                   const real_wp_ c_u[], 
                   const real_wp_ x_l[], 
                   const real_wp_ x_u[], 
                   real_wp_ x[], 
                   real_wp_ c[], 
                   real_wp_ y[], 
                   real_wp_ z[], 
                   int x_stat[], 
                   int c_stat[] );
void lpb_information( void **data,
                      struct lpb_inform_type *inform,
                      int *status );
void lpb_terminate( void **data, 
                    struct lpb_control_type *control, 
                    struct lpb_inform_type *inform );